Got some of google autocomplete places finished but the click has to be long on mobile which has to be fixed

--- a/client/www/css/style.css
+++ b/client/www/css/style.css
@@ -25,3 +25,9 @@
 .scroll {
    height: 100%;
 }
+
+.pac-container {
+   /* This only fixes autocomplete on browsers not mobile */
+   pointer-events: visibleStroke !important;
+}
+
